Committing new html page called "about" to be added to website

--- a/templates/about.html
+++ b/templates/about.html
@@ -5,6 +5,7 @@
     <title>About</title>
 </head>
 <body>
+<!-- New changes for commit -->
 <!-- Logo in beginning to emphasize school I am in -->
 <img src="https://terpconnect.umd.edu/~jbono/bmgt407/images/smith-logo.png"
          width = "267" height = "72" alt = "Smith Logo">
