Added colon after Gender to fix validator issue "The value of the for attribute of the label element must be the ID of a non-hidden form control."

--- a/templates/contact.html
+++ b/templates/contact.html
@@ -54,7 +54,7 @@
             <input type="text" class="form-control" id="last_name" name="last_name">
         </div>
         <div class="mb-3">
-            <label for="gender" class="form-label">Gender</label>
+            <label for="gender" class="form-label">Gender:</label>
             <select id="form-select" class="form-select" name="gender">
                 <option>Male</option>
                 <option>Female</option>
