Last commit did not work, trying a different approach to fix validator issue

--- a/templates/contact.html
+++ b/templates/contact.html
@@ -54,8 +54,8 @@
             <input type="text" class="form-control" id="last_name" name="last_name">
         </div>
         <div class="mb-3">
-            <label for="gender" class="form-label">Gender:</label>
-            <select id="form-select" class="form-select" name="gender">
+            <label for="gender" class="form-label">Gender</label>
+            <select id="gender" class="form-select" name="gender">
                 <option>Male</option>
                 <option>Female</option>
                 <option>Other</option>
