--- a/templates/student_view_all.html
+++ b/templates/student_view_all.html
@@ -22,7 +22,7 @@
                 {% endfor %}
             {% endif %}
         {% endwith %}
-
+<!-- Table creation -->
     <table class="table table-striped">
         <tr>
             <th>Last Name</th>
@@ -32,7 +32,7 @@
             <th>Email</th>
             <th>Actions</th>
         </tr>
-
+<!-- Adding table connection to inputs -->
         {% for each_student, each_major in students %}
         <tr>
             <td><a href="{{ url_for('student_view', student_id=each_student['student_id']) }}">{{ each_student['last_name'] }}</a></td>
